--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,3 +10,21 @@
   margin: 1%;
   border-top: 2px gray solid;
 }
+
+.App ul li a {
+  text-decoration: none;
+}
+
+.App ul li a:visited {
+  color: blue;
+}
+
+.App ul li img {
+  width: 150px;
+  height: 200px;
+  margin: 10px;
+}
+
+form label input {
+  margin: 1%;
+}
